# Lifelong-Learning

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  test_output.txt
scripts/: 00_check_env.py  00_check_vec_env.py  01_train_ppo.py  analyze_runs.py  check_dreamer_env_io.py  check_env.py  check_vec_env.py  debug_logging.py  diagnostic_env_check.py  test_dreamer_compat.py  train_brain.py  train_dreamerv3_minigrid.py  train_ppo.py  verify_rewards.py  visualize_regimes.py
src/lifelong_learning/agents/brain/: __init__.py  meta_agent.py  meta_env.py  signals.py
src/lifelong_learning/agents/ppo/: buffers.py  network.py  ppo.py  train.py  world_model.py
src/lifelong_learning/envs/: __init__.py  dreamer_compat.py  dual_goal.py  make_env.py  minigrid_obs.py  regime_wrapper.py
src/lifelong_learning/envs/wrappers/: __init__.py  action_reduce.py  one_hot.py
src/lifelong_learning/utils/: logger.py  running_stats.py  seeding.py
src/lifelong_learning/wrappers/: vector.py
tests/: test_dyna_logic.py  test_env_integrity.py  test_manual_stats.py  test_meta_env.py  test_signal_extraction.py
