[project]
name = "lifelong-learning"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore pkg_resources deprecation warning from pygame
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    
    # Ignore gym env override warning
    "ignore:.*Overriding environment.*:UserWarning",
]
